litellm-rust/crates/traces/tests/snapshots/normalize__llamaindex_swarm.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.init_run",
    "display_name": "AgentWorkflow.init_run",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10d7b07d0>\", \"ev\": \"AgentWorkflowStartEvent()\"}"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.setup_agent",
    "display_name": "AgentWorkflow.setup_agent",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10d495cd0>\", \"ev\": \"AgentInput(input=[ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='What is an agent trace?')])], curren"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike._prepare_chat_with_tools",
    "display_name": "OpenAILike._prepare_chat_with_tools",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"tools\": [\"<FunctionTool object>\"], \"user_msg\": null, \"chat_history\": [\"ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='Hand off to search_agent to gather facts.')])\", \"Chat"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike.achat",
    "display_name": "OpenAILike.achat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 129,
    "output_tokens": 42,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike.achat",
    "display_name": "OpenAILike.achat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\": [\"ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='Hand off to search_agent to gather facts.')])\", \"ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.run_agent_step",
    "display_name": "AgentWorkflow.run_agent_step",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10d4963f0>\", \"ev\": \"AgentSetup(input=[ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='Hand off to search_agent to gath"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.parse_agent_output",
    "display_name": "AgentWorkflow.parse_agent_output",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10eb1b770>\", \"ev\": \"AgentOutput(response=ChatMessage(role=<MessageRole.ASSISTANT: 'assistant'>, additional_kwargs={'tool_calls': [ChatCompletionMessageFunctionToolCall(id='call_OKVibOl"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "FunctionTool.acall",
    "display_name": "FunctionTool.acall",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"kwargs\": {\"to_agent\": \"search_agent\", \"reason\": \"Gather facts and a clear definition of “agent trace,” including common meanings and context-dependent nuance.\", \"ctx\": \"<workflows.context.context.Context object at 0x10d7918c0>\"}}"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.call_tool",
    "display_name": "AgentWorkflow.call_tool",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10d7918c0>\", \"ev\": \"ToolCall(tool_name='handoff', tool_kwargs={'to_agent': 'search_agent', 'reason': 'Gather facts and a clear definition of “agent trace,” including common meanings an"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.aggregate_tool_results",
    "display_name": "AgentWorkflow.aggregate_tool_results",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10eabf460>\", \"ev\": \"ToolCallResult(tool_name='handoff', tool_kwargs={'to_agent': 'search_agent', 'reason': 'Gather facts and a clear definition of “agent trace,” including common meani"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.setup_agent",
    "display_name": "AgentWorkflow.setup_agent",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10eb95750>\", \"ev\": \"AgentInput(input=[ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='What is an agent trace?')]), ChatMes"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike._prepare_chat_with_tools",
    "display_name": "OpenAILike._prepare_chat_with_tools",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"tools\": [\"<FunctionTool object>\"], \"user_msg\": null, \"chat_history\": [\"ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='List key facts, then hand off to writer_agent.')])\", "
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike.achat",
    "display_name": "OpenAILike.achat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 215,
    "output_tokens": 281,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike.achat",
    "display_name": "OpenAILike.achat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\": [\"ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='List key facts, then hand off to writer_agent.')])\", \"ChatMessage(role=<MessageRole.USER: 'user'>, additional_k"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.run_agent_step",
    "display_name": "AgentWorkflow.run_agent_step",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10eb95b50>\", \"ev\": \"AgentSetup(input=[ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='List key facts, then hand off to"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.parse_agent_output",
    "display_name": "AgentWorkflow.parse_agent_output",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10e673f20>\", \"ev\": \"AgentOutput(response=ChatMessage(role=<MessageRole.ASSISTANT: 'assistant'>, additional_kwargs={'tool_calls': [ChatCompletionMessageFunctionToolCall(id='call_lan4Eiu"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "FunctionTool.acall",
    "display_name": "FunctionTool.acall",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"kwargs\": {\"to_agent\": \"writer_agent\", \"reason\": \"Write a concise answer to “What is an agent trace?” using these key facts: In AI/LLM agent systems, an agent trace is a record of one agent run, showing the ordered steps taken to respond t"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.call_tool",
    "display_name": "AgentWorkflow.call_tool",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10d1875c0>\", \"ev\": \"ToolCall(tool_name='handoff', tool_kwargs={'to_agent': 'writer_agent', 'reason': 'Write a concise answer to “What is an agent trace?” using these key facts: In AI/L"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.aggregate_tool_results",
    "display_name": "AgentWorkflow.aggregate_tool_results",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10ec4b230>\", \"ev\": \"ToolCallResult(tool_name='handoff', tool_kwargs={'to_agent': 'writer_agent', 'reason': 'Write a concise answer to “What is an agent trace?” using these key facts: I"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.setup_agent",
    "display_name": "AgentWorkflow.setup_agent",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10ec4b690>\", \"ev\": \"AgentInput(input=[ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='What is an agent trace?')]), ChatMes"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike._prepare_chat_with_tools",
    "display_name": "OpenAILike._prepare_chat_with_tools",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"tools\": [], \"user_msg\": null, \"chat_history\": [\"ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='Write a short answer from the facts.')])\", \"ChatMessage(role=<MessageRole.US"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike.achat",
    "display_name": "OpenAILike.achat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 440,
    "output_tokens": 86,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "OpenAILike.achat",
    "display_name": "OpenAILike.achat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "openai/gpt-6-luna",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\": [\"ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='Write a short answer from the facts.')])\", \"ChatMessage(role=<MessageRole.USER: 'user'>, additional_kwargs={}, "
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.run_agent_step",
    "display_name": "AgentWorkflow.run_agent_step",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10ec38530>\", \"ev\": \"AgentSetup(input=[ChatMessage(role=<MessageRole.SYSTEM: 'system'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='Write a short answer from the fa"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.parse_agent_output",
    "display_name": "AgentWorkflow.parse_agent_output",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"ctx\": \"<workflows.context.context.Context object at 0x10eb2f350>\", \"ev\": \"AgentOutput(response=ChatMessage(role=<MessageRole.ASSISTANT: 'assistant'>, additional_kwargs={}, blocks=[TextBlock(block_type='text', text='An **agent trace** is a"
  },
  {
    "scope": "openinference.instrumentation.llama_index",
    "name": "AgentWorkflow.run",
    "display_name": "AgentWorkflow.run",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": true,
    "agent": "research_agent",
    "framework": "llama-index",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"init_state\": {\"is_running\": false, \"config\": {\"steps\": {\"aggregate_tool_results\": {\"accepted_events\": [\"<ToolCallResult(*, tool_name: str, tool_kwargs: dict, tool_id: str, tool_output: llama_index.core.tools.types.ToolOutput, return_direc"
  }
]
