litellm-rust/crates/traces/tests/snapshots/normalize__openai_agents_swarm.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "response",
    "display_name": "response",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "openai/gpt-6-luna",
    "input_tokens": 127,
    "output_tokens": 52,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_Jb2tX10fTGQrppj4a-vi8rdbJ8156Km1DOzdvGUy6okHgMg8LipryJ4qBTCvcd1zdXj0Kpt9uyX9QM9yf8nfO5-r1SGOuxm9MfWSCihT29lDCV4vQYC3tHWiDSHPrlPEO2kP98DGlbbbkplSzckPdA7uExmX32P919N7UnRvVkgQY_nFmXVBG-YA4szcrInBgEMJJ-y_Mvc8uXi6VVK40SBWDBsaQyGDvR_3fAcUVT-zA_IEr47C6VCdjpaU2OjHlNhq1CUuue2U2jB441PPUfGrVShYg2vu1l1xbV79IRDyWgyB6ACPpRaXq9l3UQJPjKOys2wZ3a_ns1p1LpX2IkfTqoAptDVJEmuKQo-zkvsSCxrWCK7Sm32B5ZzHW2uPl3tSy40eGpnKXg_DqneL3nRNCyw_J3hEf8ho7OaEOTy9GOtenXKfmTa0EF0WYzRVbgjfZakSq4uLHeHU4IXZKS3V"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "response",
    "display_name": "response",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "openai/gpt-6-luna",
    "input_tokens": 52,
    "output_tokens": 424,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Define agent trace in AI/LLM agent systems. Explain what information it contains, why used, and distinguish from a simple chat transcript if relevant. Prefer broadly applicable definition."
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "turn",
    "display_name": "turn",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "search_agent",
    "display_name": "search_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "research_workflow",
    "display_name": "research_workflow",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "search_agent",
    "display_name": "search_agent",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"input\":\"Define agent trace in AI/LLM agent systems. Explain what information it contains, why used, and distinguish from a simple chat transcript if relevant. Prefer broadly applicable definition.\"}"
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "turn",
    "display_name": "turn",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "response",
    "display_name": "response",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "openai/gpt-6-luna",
    "input_tokens": 479,
    "output_tokens": 133,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_K2lO4dfvzQsWWas-7CJy-t3jOpJqU3GoBN821te815PbXH_l3GjiGXeRlwbBDy8Mo30kVZG_j45cfb-dq9a51wdDhtopTvkfqsLn-Y8jsT7Cy3G3ilI7R_4W5xIAaY2WerDIsIPeMkjbhdMnInZiA1LNtAEciTzc-rHATffyAJ_6wB16bXNHb8yfZDAUeCbmYnOegmGS0SnTV2tSyvzchsYP996XxBOGotCxyTc_JEDgcZOa0bbtCzYFLsFJ40E3zEPBjhWiyB5n3hV7rFe-6gadq2hYEK7SA5h9pFfnPg4qU-Z6nKx-G9JzVyz-O1vKCy3R5JJze5EcflsQhfEalVw_sB5vYi_Z4atMV0TVAdosyZOM0LvzlnFqWexWgg58tFz81D7ik_C6eFhKr8SAu6sM3xzxo4ikKFnTbKqhqV0BbIVmZorEEupqdfuzJS5yrZfxarFm2PNg8lwYQOMquuv1"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "response",
    "display_name": "response",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "openai/gpt-6-luna",
    "input_tokens": 135,
    "output_tokens": 110,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_gZSgI4oDi1EAw7wctE_5p-Q7traUQHirYj0DUm5cxRFMwXq-GEtdVaWknhAchAuVKTk-QYtMW-xfm89IEbq0lsulAk9HNof0ruK4KkdXtv1d_gM4GERLviKDE6tu0mKOKsx5uPNjly-0Paxq9Hu3D38vm9LBv8KA8rfmVC63mM0ei9CcV2ywyVoPpBMWr-SNxY1mW4C7bWI_wbaIj7drKfVdwNpTH2TNd3DAPCp65ANZPhvhpgpfm8TSTfMzTEj0ETRnBBPuI2jojCfQHZk2I59jRqM8dbijMbbrUtGqcJMAIdi8Jpoh-hmi9N-8xvfsIQrJGPnJyHbkkAJ4jyc1-Noes-h9nqQ9nBH68g5iBdQQiA_TFoauzbY6bTEAmFxKHBp4EnK10FWXKs6D4AZtn5LXXCgMhP8UT5x4cNurvTnPncVKbtXcO6uXxl_VTrP9NUC0T9GRFXyerxukNIZeERG2"
    ],
    "tool_call_id": "",
    "input_preview": "Answer the user asking 'What is an agent trace?' Use these facts: Broadly, structured record of an AI agent execution, sequence of events, no universal format. May include input/context, model calls/outputs, tool actions and results, handof"
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "turn",
    "display_name": "turn",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "writer_agent",
    "display_name": "writer_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "research_workflow",
    "display_name": "research_workflow",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "writer_agent",
    "display_name": "writer_agent",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"input\":\"Answer the user asking 'What is an agent trace?' Use these facts: Broadly, structured record of an AI agent execution, sequence of events, no universal format. May include input/context, model calls/outputs, tool actions and resul"
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "turn",
    "display_name": "turn",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "response",
    "display_name": "response",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "openai/gpt-6-luna",
    "input_tokens": 729,
    "output_tokens": 107,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_7cbadH3lbdKxsliy9V80ZAatB-NO5LWDrB47bVZhjZlzVScFMTp0D3h5-ylva9hHoS_vzuOzsPxptrJxd-NyNKXlFdh9qJqRCwrt4pimqA15X66DV0dhE6gewPNr2CN6yAqVrBcudPxP-AiuWPgQLLWEm5Q1w5VM1WFS8iTvO1WH2Y-utNTNVHBnb2kbEacrna8eoTKbHnrccJqhsoiH1NHiOjd62FDc0fX4H6kTeez_igYbC6qQrO-lqS1jCu6uyovoeeuWsfbOnb5NE1kOL-ptm7WHwj70lKFhb6IVsrsE5MbjWVEBp8OIjtEKGnUrIGD1QQ6L2Vfkg58HDDaDTYp0IWBwdKJChN3wzmLsn5Kv_4w2ewBgeEJ-K-1Rdxie3-ppo_tOX5GHBmCB4sdz-VsoGAVzKsQvaLnbfpVa_qNUX5-y5B7uW8Jj2gT6OyfdSciRr4RVeKM3IYteAh5ATOgM"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "turn",
    "display_name": "turn",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "research_agent",
    "display_name": "research_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "research_workflow",
    "display_name": "research_workflow",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.openai_agents",
    "name": "research_workflow",
    "display_name": "research_workflow",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai-agents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  }
]
