litellm-rust/crates/traces/tests/snapshots/normalize__opentelemetry_simple.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.openai",
    "name": "ChatCompletion",
    "display_name": "ChatCompletion",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai",
    "model": "openai/gpt-6-luna",
    "input_tokens": 12,
    "output_tokens": 231,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkcFAPDpKT1g1pvXf9kSHNC90xhw"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "__main__",
    "name": "research_agent",
    "display_name": "research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  }
]
