litellm-rust/crates/traces/tests/snapshots/normalize__pydantic_ai_simple.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "pydantic-ai",
    "name": "chat openai/gpt-6-luna",
    "display_name": "chat openai/gpt-6-luna",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "pydantic-ai",
    "model": "openai/gpt-6-luna",
    "input_tokens": 12,
    "output_tokens": 233,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkhNUytmSkeoJJEGvxyLZbfxvqsO"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "pydantic-ai",
    "name": "invoke_agent research_agent",
    "display_name": "invoke_agent research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "pydantic-ai",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  }
]
